k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akupeduli-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: akupeduli
  template:
    metadata:
      labels:
        app: akupeduli
    spec:
      # InitContainer bertugas meng-copy file publik (CSS/JS/Images) ke folder yang bisa dibaca Nginx
      containers:
      # Container 1: Laravel Aplikasi
      - name: php-app
        image: ghcr.io/nadhiuuu/akupeduli-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000

      # Container 2: Nginx Web Server
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-public
          mountPath: /var/www/public
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf

      volumes:
      - name: shared-public
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: akupeduli-service
spec:
  type: NodePort
  selector:
    app: akupeduli
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
