k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akupeduli-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  # Aturan untuk akupeduli.my.id
  - host: akupeduli.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: akupeduli-service
            port:
              number: 80
  # Aturan untuk www.akupeduli.my.id
  - host: www.akupeduli.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: akupeduli-service
            port:
              number: 80
